--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li class="active"><a href="#">Videos</a></li>
-                <li class="active"><a href="#">Achivements</a></li>
-                <li class="active"><a href="#">Contact Us</a></li>
+                <li class="active"><a href="#campus_life">Campus life</a></li>
+                <li class="active"><a href="#achivements">Achivements</a></li>
+                <li class="active"><a href="#details">Contact Us</a></li>
             </ul>
         </div>
     </nav>
@@ -39,31 +39,74 @@
     <div class="announcement">
         <marquee id="marqueeStyle" onmouseover="this.stop();" onmouseout="this.start();"> *** Feel free to ask queries on school@gmail.com *** </marquee>
     </div>
-    
-<center>
-    <iframe width="1280" height="720" src="https://www.youtube.com/embed/gavMf-mNxsE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </center>
 
-    <div id="Map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1586.2680635805802!2d-122.02860155254281!3d37.329814256136224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5ba77c76c97%3A0xbb7a061c9a018468!2sSam%20H.%20Lawson%20Middle%20School!5e0!3m2!1sen!2sus!4v1621988892757!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+    <center>
+        <iframe width="1280" height="720" src="https://www.youtube.com/embed/gavMf-mNxsE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    </center>
 
+    <div class="container">
 
-   <div id="details">
-    <img src="https://i.postimg.cc/RZMSc6hR/sp.png" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
-    <h3>Principal Name: </h3>
-       <h4>XZY</h4>
-        <div class="contact_1" >
-           <a href="school@gmail.com?Subject=Hi">
-               <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;school@gmail.com</h5>
-            </a> 
-           <a href="#"> 
-               <h5><i class="fa fa-instagram" ></i>&nbsp;&nbsp;schoolId</h5>
-            </a> 
-            <a href="#"> 
-              <h5><i class="fa fa-phone-square" ></i>&nbsp;&nbsp;9916001600</h5>
-           </a> 
+        <div class="page-header" id="campus_life">
+            <h2 class="text-capitalize">Campus Life</h2>
+
+            <div class="row">
+
+                <div class="travel_mainDiv">
+                    <img class="img-responsive" src="library2.jpg">
+                    <h4 class="text-capitalize"><kbd>school library</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-left text-capitalize">Was build in 1980</h5>
+                    <p class="text-muted text-left">Write something about the mentioned place</p>
+                </div>
+                <div class="travel_mainDiv">
+                    <img class="img-responsive" src="Field.jpg">
+                    <h4 class="text-capitalize"><kbd>Soccer Field</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-left text-capitalize">Was build in 1982</h5>
+                    <p class="text-muted text-left">Write something about the mentioned place</p>
+
+                </div>
+                <div class="travel_mainDiv">
+                    <img class="img-responsive" src="Auditorium.jpg">
+                    <h4 class="text-capitalize"><kbd>Auditorium</kbd></h4>
+                    <hr>
+                    <h5 class="text-success text-left text-capitalize">Was build in 1980</h5>
+                    <p class="text-muted text-left">Write something about the mentioned place</p>
+                </div>
+            </div>
         </div>
-      </div>
+        <div class="page-header" id="achivements">
+            <h2 class="text-capitalize">Achivements</h2>
 
+
+            <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school_achievement1"> Inter School Debate On Environment Pollution <i class="fa fa-sort-desc"></i> </div>
+            <div class="bg-primary movie_head" data-toggle="collapse" data-target="#school_achievement2"> Inter School Football Competition<i class="fa fa-sort-desc"></i> </div>
+            <div id="school_achievement2" class="collapse">
+                <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12" id="achievementsID"> <img src="https://i.postimg.cc/sxcP1G1L/sm2.jpg" class="img-responsive img-thumbnail"> </div>
+                <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+                    <h5 class="text-success text-left text-capitalize">Came second in inter school football competition </h5>
+                    <p>Write about this achievement</p>
+                </div>
+            </div>
+        </div>
+            <div id="Map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1586.2680635805802!2d-122.02860155254281!3d37.329814256136224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5ba77c76c97%3A0xbb7a061c9a018468!2sSam%20H.%20Lawson%20Middle%20School!5e0!3m2!1sen!2sus!4v1621988892757!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+            <div id="details">
+                <img src="https://i.postimg.cc/RZMSc6hR/sp.png" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
+                <h3>Principal Name: </h3>
+                <h4>XZY</h4>
+                <div class="contact_1">
+                    <a href="school@gmail.com?Subject=Hi">
+                        <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;school@gmail.com</h5>
+                    </a>
+                    <a href="#">
+                        <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;schoolId</h5>
+                    </a>
+                    <a href="#">
+                        <h5><i class="fa fa-phone-square"></i>&nbsp;&nbsp;9916001600</h5>
+                    </a>
+                </div>
+            </div>
+        </div>
 </body>
 
 </html>
