--- a/index.html
+++ b/index.html
@@ -89,24 +89,37 @@
                 </div>
             </div>
         </div>
-            <div id="Map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1586.2680635805802!2d-122.02860155254281!3d37.329814256136224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5ba77c76c97%3A0xbb7a061c9a018468!2sSam%20H.%20Lawson%20Middle%20School!5e0!3m2!1sen!2sus!4v1621988892757!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
-            <div id="details">
-                <img src="https://i.postimg.cc/RZMSc6hR/sp.png" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
-                <h3>Principal Name: </h3>
-                <h4>XZY</h4>
-                <div class="contact_1">
-                    <a href="school@gmail.com?Subject=Hi">
-                        <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;school@gmail.com</h5>
-                    </a>
-                    <a href="#">
-                        <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;schoolId</h5>
-                    </a>
-                    <a href="#">
-                        <h5><i class="fa fa-phone-square"></i>&nbsp;&nbsp;9916001600</h5>
-                    </a>
-                </div>
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="new">
+            <h2 class="text-capitalize ">Whats New?</h2>
+        </div>
+        <ul class="list-group">
+            <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+                <h4>New School Canteen</h4> <img src="canteen.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+               <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" >The food options and responsibilities to consider, canteens must be better organised and more efficient than they have been in the past. Online menus with photographs of the meals prepared, and detailed descriptions of their ingredients help both students and parents make the right nutritional choices. Each student or staff member who accesses the canteen could be provided with a School Canteen Account on the school website that keeps track of their previous meal choices and any dietary requirements they may have. Ordering online by ticking a box and paying for meals online can eliminate all the fuss of money handling, making it safer and less complicated for staff and students alike. Here again, diversity is the key.</p>
+            </li>
+        </ul>
+        <li class="list-group-item list-group-item-warning col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+            <h4>Implemented Online Attendance Management System</h4> <img src="https://5.imimg.com/data5/ZA/SJ/QC/SELLER-7950336/rfid-smart-attendance-for-school-500x500.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12" >
+            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" >1. Accuracy Humans are prone to error, even if we provide them with supporting computational devices. Automated attendance management systems ensure accurate time records and minimize the inevitable and costly errors with manual data entry. This accurate data thereby helps to provide accurate performance and payroll data.</p>< br>
+        </li>
+        <div id="Map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1586.2680635805802!2d-122.02860155254281!3d37.329814256136224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5ba77c76c97%3A0xbb7a061c9a018468!2sSam%20H.%20Lawson%20Middle%20School!5e0!3m2!1sen!2sus!4v1621988892757!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
+        <div id="details">
+            <img src="https://i.postimg.cc/RZMSc6hR/sp.png" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
+            <h3>Principal Name: </h3>
+            <h4>XZY</h4>
+            <div class="contact_1">
+                <a href="school@gmail.com?Subject=Hi">
+                    <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;school@gmail.com</h5>
+                </a>
+                <a href="#">
+                    <h5><i class="fa fa-instagram"></i>&nbsp;&nbsp;schoolId</h5>
+                </a>
+                <a href="#">
+                    <h5><i class="fa fa-phone-square"></i>&nbsp;&nbsp;9916001600</h5>
+                </a>
             </div>
         </div>
+    </div>
 </body>
 
 </html>
