--- a/index.html
+++ b/index.html
@@ -95,13 +95,72 @@
         <ul class="list-group">
             <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
                 <h4>New School Canteen</h4> <img src="canteen.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
-               <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" >The food options and responsibilities to consider, canteens must be better organised and more efficient than they have been in the past. Online menus with photographs of the meals prepared, and detailed descriptions of their ingredients help both students and parents make the right nutritional choices. Each student or staff member who accesses the canteen could be provided with a School Canteen Account on the school website that keeps track of their previous meal choices and any dietary requirements they may have. Ordering online by ticking a box and paying for meals online can eliminate all the fuss of money handling, making it safer and less complicated for staff and students alike. Here again, diversity is the key.</p>
+                <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">The food options and responsibilities to consider, canteens must be better organised and more efficient than they have been in the past. Online menus with photographs of the meals prepared, and detailed descriptions of their ingredients help both students and parents make the right nutritional choices. Each student or staff member who accesses the canteen could be provided with a School Canteen Account on the school website that keeps track of their previous meal choices and any dietary requirements they may have. Ordering online by ticking a box and paying for meals online can eliminate all the fuss of money handling, making it safer and less complicated for staff and students alike. Here again, diversity is the key.</p>
             </li>
         </ul>
         <li class="list-group-item list-group-item-warning col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
-            <h4>Implemented Online Attendance Management System</h4> <img src="https://5.imimg.com/data5/ZA/SJ/QC/SELLER-7950336/rfid-smart-attendance-for-school-500x500.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12" >
-            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12" >1. Accuracy Humans are prone to error, even if we provide them with supporting computational devices. Automated attendance management systems ensure accurate time records and minimize the inevitable and costly errors with manual data entry. This accurate data thereby helps to provide accurate performance and payroll data.</p>< br>
+            <h4>Implemented Online Attendance Management System</h4> <img src="https://5.imimg.com/data5/ZA/SJ/QC/SELLER-7950336/rfid-smart-attendance-for-school-500x500.jpg" class="img-responsive col-lg-5 col-md-5 col-sm-5 col-xs-12">
+            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">1. Accuracy Humans are prone to error, even if we provide them with supporting computational devices. Automated attendance management systems ensure accurate time records and minimize the inevitable and costly errors with manual data entry. This accurate data thereby helps to provide accurate performance and payroll data.</p>
+            < br>
         </li>
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="books">
+            <h2 class="text-capitalize ">Alumni</h2>
+        </div>
+
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <h2 class="text-capitalize ">Our School Alumni</h2>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" data-toggle="modal" data-target="#First_Space_Encyclopaedia"> <img src="BillGates.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">Bill Gates </p>
+        </div>
+
+
+        <div class="modal fade" id="First_Space_Encyclopaedia">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+
+                    <div class="modal-header"> <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Bill Gates</h4>
+                    </div>
+
+                    <div class="modal-body"> <img src="BillGates.jpg" class="img-responsive img_modal">
+                        <p class="p_modal">William Henry Gates III is an American business magnate, software developer, investor, author, and philanthropist.<br> </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" data-toggle="modal" data-target="#Man_on_the_Moon"> <img src="Elon.jpg" class="img-responsive">
+            <hr>
+            <p class="text-primary">Elon Musk</p>
+        </div>
+
+        <div class="modal fade" id="Man_on_The_Moon">
+            <div class="modal-dialog">
+                <!-- Modal content-->
+                <div class="modal-content">
+
+                    <div class="modal-header"> <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">Elon Musk</h4>
+                    </div>
+
+                    <div class="modal-body"> <img src="Elon.jpg" class="img-responsive img_modal">
+                        <p class="p_modal">Elon Reeve Musk is an entrepreneur and business magnate. He is the founder, CEO, and chief engineer at SpaceX; early stage investor.<br> </p>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="contactUs">
+            <h2 class="text-capitalize ">Contact Us</h2>
+        </div>
+
         <div id="Map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1586.2680635805802!2d-122.02860155254281!3d37.329814256136224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fb5ba77c76c97%3A0xbb7a061c9a018468!2sSam%20H.%20Lawson%20Middle%20School!5e0!3m2!1sen!2sus!4v1621988892757!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe></div>
         <div id="details">
             <img src="https://i.postimg.cc/RZMSc6hR/sp.png" class="img-responsive img-circle col-lg-3 col-md-3 col-sm-3 col-xs-4">
